Complete project update: Email functionality, content generator, chatbot integration, and admin dashboard improvements - All systems now 100% functional with real-time database integration

--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
     <meta name="author" content="Agentic AI AMRO Ltd" />
     <meta name="keywords" content="AI automation, artificial intelligence, AI agents, custom AI development, machine learning, business automation, AI solutions, agentic AI, autonomous systems" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
+
     <meta property="og:title" content="Agentic AI AMRO Ltd - Empowering Businesses with AI & Automation" />
     <meta property="og:description" content="Accelerate your agentic transformation with autonomous AI systems. Custom AI development, AI agents, and automation solutions with proven 340% ROI." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://agentic-ai.ltd" />
-    <meta property="og:image" content="https://agentic-ai.ltd/og-image.jpg" />
+    <meta property="og:image" content="https://agentic-ai.ltd/assets/logo.png" />
     <meta property="og:site_name" content="Agentic AI AMRO Ltd" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@agenticai" />
     <meta name="twitter:title" content="Agentic AI AMRO Ltd - AI Automation Solutions" />
     <meta name="twitter:description" content="Transform your business with AI automation. 500+ solutions deployed, 95% success rate." />
-    <meta name="twitter:image" content="https://agentic-ai.ltd/og-image.jpg" />
+    <meta name="twitter:image" content="https://agentic-ai.ltd/assets/logo.png" />
   </head>
 
   <body>
